--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,13 +1,14 @@
 # must be unique in a given SonarQube instance
-sonar.projectKey=java-sample-app
+sonar.projectKey=java
 # --- optional properties ---
 # defaults to project key
-sonar.projectName=java-sample-application
+sonar.projectName=java
 # defaults to 'not provided'
 sonar.projectVersion=1.0
 # Path is relative to the sonar-project.properties file. Defaults to .
 sonar.sources=. 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
-sonar.host.url=http://172.31.37.171:9091
+sonar.host.url=http://3f354268741c.mylabserver.com:8025
+sonar.login=de66a4e662f4bf15bc082258fb3659f2cd9461ce
 sonar.java.binaries=./target/classes
