--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,14 +1,14 @@
 # must be unique in a given SonarQube instance
-sonar.projectKey=java
+sonar.projectKey=clouds
 # --- optional properties ---
 # defaults to project key
-sonar.projectName=java
+sonar.projectName=clouds
 # defaults to 'not provided'
 sonar.projectVersion=1.0
 # Path is relative to the sonar-project.properties file. Defaults to .
 sonar.sources=. 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
-sonar.host.url=http://3f354268741c.mylabserver.com:8055
-sonar.login=b3d60db448b7ae024653975f6f9d8800fdab047b
+sonar.host.url=http://3f354268741c.mylabserver.com:8000
+sonar.login=f34a4249bf442148ee89cbdd8d4ce230d23ed8dc
 sonar.java.binaries=./target/classes
