--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,6 +9,6 @@ sonar.projectVersion=1.0
 sonar.sources=. 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
-sonar.host.url=http://3f354268741c.mylabserver.com:8000
+sonar.host.url=http://172.31.44.106:8066
 sonar.login=f34a4249bf442148ee89cbdd8d4ce230d23ed8dc
 sonar.java.binaries=./target/classes
