--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,5 +9,6 @@ sonar.projectVersion=1.0
 sonar.sources=. 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
-sonar.host.url=http://172.31.37.171:9091
+sonar.host.url=http://172.31.44.106:8017
 sonar.java.binaries=./target/classes
+sonar.login=65a9a7a898ad8096b239a87d25747552d236a037
