New sonar token

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,6 +9,6 @@ sonar.projectVersion=1.0
 sonar.sources=. 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
-sonar.host.url=http://172.31.44.106:8017
+sonar.host.url=http://7ba2808d971c.mylabserver.com:805
 sonar.java.binaries=./target/classes
-sonar.login=6a7db79361beb53e3856a0fd90f0c22436f3858e
+sonar.login=4301241e5a35898840a9d2f7a90f32659234ebb2
