--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,6 +9,6 @@ sonar.projectVersion=1.0
 sonar.sources=. 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
-sonar.host.url=http://7ba2808d971c.mylabserver.com:805
+sonar.host.url=http://7ba2808d971c.mylabserver.com:8055/
 sonar.java.binaries=./target/classes
-sonar.login=4301241e5a35898840a9d2f7a90f32659234ebb2
+sonar.login=476995594a0f346174d47dd69bc377663f60977a4
